# ext-c2pa

./: .ext-template.conf  .gitignore  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  RELEASE.md  about.hbs  about.toml  build.rs  composer.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/getting-started/: installation.md  quickstart.md
docs/src/guide/: derivatives.md  identities.md  reading.md  signing.md  trust.md
docs/src/reference/: api.md  design.md  errors.md
src/: builder.rs  error.rs  lib.rs  reader.rs  settings.rs  signer.rs
stubs/: c2pa.stubs.php
tests/phpt/: 001-exception-shape.phpt  002-reader.phpt  003-sign.phpt  004-derivatives.phpt  005-entity.phpt
tests/phpt/fixtures/: dev-ca.pem  dev-key.pem
