[package]
name          = "ext-c2pa"
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.89"
license       = "GPL-2.0-or-later"
description   = "PHP 8.3+ native C2PA Content Credentials: read/validate manifests and sign Media Library images incl. derivatives."
repository    = "https://github.com/ericmann/ext-c2pa"
readme        = "README.md"
publish       = false

[lib]
name       = "c2pa"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "=0.15.13"
thiserror  = "=2.0.18"
# Pin domain crates EXACTLY (=x.y.z) — upgrades are deliberate, tested bumps.
# c2pa: in-memory only. default-features=false drops file_io + remote-manifest
# fetch (no network egress, no disk); rust_native_crypto avoids a system
# OpenSSL link so the .so stays portable. The image bytes cross PHP<->Rust as
# binary (Binary<u8>), never UTF-8.
c2pa       = { version = "=0.89.0", default-features = false, features = ["rust_native_crypto"] }
serde_json = "=1.0.150"
# Generate a per-site dev signing identity with a configurable organization
# (so the credential reads e.g. "NASA" instead of "wp-c2pa"). `ring` backend
# keeps the .so portable (no system crypto link), matching c2pa's posture.
rcgen      = { version = "=0.14.8", default-features = false, features = ["pem", "ring"] }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[dev-dependencies]
tempfile = "=3.27.0"
